tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/bool/starting-same-false.stderr
TOML parse error at line 1, column 10
  |
1 | a = falsey
  |          ^
expected newline, `#`
